# midscene-python

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_GUIDE.md  __init__.py  _node_manager.py  agent.py  cli.py  config.py  exceptions.py  mixin.py  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
midscene_android/: __init__.py  _node_manager.py  _runtime.py  agent.py  config.py  midscene_agent.py  mixin.py  node_service.py  runtime.py  service.py
midscene_android/_node_driver/src/: package.json  service.js
midscene_android/_node_service/: package.json  service.js
src/midscene/: __init__.py  _pytest_plugin.py  _pytest_support.py  agent_android.py  agent_web.py  base_agent.py  config.py  drivers.py  exceptions.py  node_bootstrap.py  node_service.py  runtime.py
src/midscene/_node_driver/android/service/: package.json
src/midscene/_node_driver/web/service/: package.json  service.js
src/midscene_android/: __init__.py  _pytest_plugin.py  config.py  exceptions.py  midscene_agent.py  node_bootstrap.py  node_service.py  runtime.py
src/midscene_android/_node_driver/service/: service.js
tests/: conftest.py  example_integration.py  test_agent_integration.py  test_core.py  test_example_integration.py  test_node_service.py  test_web_service.py
tools/: build_platform_wheel.py  build_wheel.py  fetch_node_binaries.py  upload_pypi.py
