[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midscene-android"
version = "0.0.3"
description = "AI-powered Android automation via Midscene.js, bridged into Python"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["android", "automation", "testing", "ai", "midscene"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "requests>=2.28",
    "setuptools>=82.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock",
    "build",
    "twine",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "device: tests that require a real Android device connected via ADB and a valid AI Key",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["midscene_android"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["midscene_android"]
exclude = ["midscene_android._node_driver*"]

[tool.setuptools.package-data]
midscene_android = [
    "_node_driver/service/package.json",
    "_node_driver/service/service.js",
]

[tool.setuptools.exclude-package-data]
midscene_android = [
    "_node_driver/bin/*",
    "_node_driver/npm/**",
]
