[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midscene-android"
version = "0.0.4"
description = "AI-powered Android automation via Midscene.js, bridged into Python"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "zypdominate" }]
keywords = ["android", "automation", "testing", "ai", "midscene"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "requests>=2.28",
    "setuptools>=82.0.1",
]

[project.urls]
Homepage = "https://github.com/zypdominate/midscene-python"
Repository = "https://github.com/zypdominate/midscene-python"
Issues = "https://github.com/zypdominate/midscene-python/issues"
Changelog = "https://github.com/zypdominate/midscene-python/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock",
    "build",
    "twine",
    "ruff",
    "mypy",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "device: tests that require a real Android device connected via ADB and a valid AI Key",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
# E501（行过长）主要由中文注释/文档字符串触发，代码宽度交由 ruff format 处理。
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["midscene_android"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["midscene_android"]
exclude = ["midscene_android._node_driver*"]

[tool.setuptools.package-data]
midscene_android = [
    "py.typed",
    "_node_driver/service/package.json",
    "_node_driver/service/service.js",
]

[tool.setuptools.exclude-package-data]
midscene_android = [
    "_node_driver/bin/*",
    "_node_driver/npm/**",
]

[tool.mypy]
# mypy 1.14+ 不再支持 python_version=3.9；运行时仍兼容 3.9，此处仅用于静态检查。
python_version = "3.10"
files = ["src/midscene_android"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
