[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "midscene"
version = "0.1.0"
description = "AI-powered Android & web UI automation via Midscene.js, bridged into Python"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "zypdominate" }]
keywords = ["android", "web", "browser", "puppeteer", "automation", "testing", "ai", "midscene"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.28",
    "pytest>=8.4.2",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "ruff",
    "mypy",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/zypdominate/midscene-python"
Repository = "https://github.com/zypdominate/midscene-python"
Issues = "https://github.com/zypdominate/midscene-python/issues"
Changelog = "https://github.com/zypdominate/midscene-python/blob/master/CHANGELOG.md"

[project.entry-points."pytest11"]
midscene = "midscene._pytest_plugin"

[tool.setuptools.packages.find]
where = ["src"]
include = ["midscene"]

[tool.setuptools.package-data]
midscene = [
    "py.typed",
    "_node_driver/android/service/package.json",
    "_node_driver/android/service/service.js",
    "_node_driver/web/service/package.json",
    "_node_driver/web/service/service.js",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "device: tests that require a real Android device connected via ADB and a valid AI Key",
    "web: tests that drive a real browser (Chromium via puppeteer) and require a valid AI Key",
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
# E501（行过长）主要由中文注释/文档字符串触发，代码宽度交由 ruff format 处理。
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["midscene"]

[tool.mypy]
# mypy 1.14+ 不再支持 python_version=3.9；运行时仍兼容 3.9，此处仅用于静态检查。
python_version = "3.10"
files = ["src/midscene"]
mypy_path = ["src"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
